# vm-native-viewer

./: CMakeLists.txt  Dockerfile  run.sh  run_container.sh
src/: CMakeLists.txt  fake_adm.h  main.cpp  main_wnd.cpp  main_wnd.h  medooze_mgr.cpp  medooze_mgr.h  monitor_manager.cpp  monitor_manager.h  peerconnection.cpp  peerconnection.h
tc_scripts/: bitrate.sh  lossdelay.sh
